# instructor

./: AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  build_mkdocs.sh  mkdocs.yml  plan_instructor-v2-preview_2026-01-24.md  pyproject.toml  requirements-examples.txt  requirements.txt  ty-tests.toml  work_through_migration.sh
.cursor/: cli-config.json
.github/workflows/: test.yml  ty.yml
apps/codex-asset-studio/: package-lock.json  package.json
docs/: api-docstring-assessment.md  api.md  faq.md  index.md  llms.txt  modes-comparison.md  why.md
docs/concepts/: batch.md  caching.md  citation.md  dictionary_operations.md  distillation.md  error_handling.md  from_provider.md  hooks.md  index.md  iterable.md  lists.md  maybe.md  migration.md  mode-migration.md  models.md  multimodal.md  parallel.md  partial.md  patching.md  philosophy.md  prompt_caching.md  prompting.md  provider-architecture-parity.md  raw_response.md  reask_validation.md  retrying.md  semantic_validation.md  templating.md  types.md  unions.md  usage.md  validation.md
docs/examples/: action_items.md  audio_extraction.md  batch_in_memory.md  batch_job_oai.md  building_knowledge_graphs.md  bulk_classification.md  classification.md  document_segmentation.md  entity_resolution.md  exact_citations.md  examples.md  extract_contact_info.md  extract_slides.md  extracting_receipts.md  groq.md  knowledge_graph.md  moderation.md  multi_modal_gemini.md  partial_streaming.md  pii.md  planning-tasks.md  recursive.md  search.md  single_classification.md  sqlmodel.md  tracing_with_langfuse.md  using_decimals.md
docs/integrations/: anthropic.md  anyscale.md  bedrock.md  cerebras.md  cohere.md  cortex.md  fireworks.md  genai.md  google.md  index.md  mistral.md  openai.md  openrouter.md  sambanova.md  vertex.md
docs/tutorials/: 3-1-validation-rag.ipynb  4-validation.ipynb  7-synthetic-data-generation.ipynb
examples/anthropic-web-tool/: run.py
examples/citation_with_extraction/: citation_fuzzy_match.py  main.py
examples/crm/: run.py
examples/debugging/: run.py
examples/fastapi_app/: main.py  script.py
examples/gpt-engineer/: generate.py  refactor.py
examples/mistral/: mistral.py
examples/patching/: anyscale.py  oai.py  pcalls.py  together.py
examples/situate_context/: run.py
examples/sqlmodel/: run.py
examples/v2-model-mode-benchmark/: README.md  run.py
instructor/: __init__.py  _lazy.py  auto_client.py  client_vertexai.py  distil.py  mode.py  templating.py
instructor/batch/: processor.py
instructor/cli/: cli.py  vestaboard.py
instructor/core/: __init__.py  client.py  patch.py  retry.py
instructor/dsl/: iterable.py  parallel.py  partial.py  simple_type.py
instructor/processing/: __init__.py  function_calls.py  multimodal.py  response.py  schema.py  validators.py
plan/: seo_plan.md
scripts/: audit_patterns.py  check_links.py  fix_api_calls.py  fix_old_patterns.py  validate_headings.py  validate_meta_tags.py
tests/: test_auto_client.py  test_batch_in_memory.py  test_function_calls.py  test_gemini_imports.py  test_genai_config_merging.py  test_genai_reask.py  test_import_lazy_loading.py  test_import_no_google_generativeai_warning.py  test_lazy_imports.py  test_messages_mutation.py  test_mistral_import_compat.py  test_multimodal.py  test_patch.py  test_prepare_response_model_list.py  test_retry_tool_choice_compat.py  test_update_total_usage.py  test_utils.py  test_vestaboard_cli.py  test_xai_optional_dependency.py
(+232 files in other folders)
